another big chunk of extraction of logic out to the service modules, UNFINISHED